# spring

./: .gitignore  Makefile.am  Makefile.in  README.md  build.gradle  configure  configure.ac  lorem.db  lorem.in
front/: angular.json  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.spec.json
front/src/app/: app.module.ts  incoming.service.ts  routing.module.ts
front/src/app/home/: home.component.html  home.component.ts
front/src/app/incoming/: incoming.component.html  incoming.component.ts
front/src/app/layout/: layout.component.html  layout.component.ts
front/src/app/menu/: menu.component.html  menu.component.ts
schema/: data.sql  schema-pgsql.sql  schema-sqlite.sql
src/main/java/org/unix7/spring/: Application.java  Configurer.java  ErrorHandlingController.java  Hello.java  HelloController.java  Incoming.java  IncomingController.java  IncomingMapper.java  IncomingModel.java  ListResult.java  Response.java  User.java  UserController.java  UserMapper.java  UserModel.java
src/main/resources/: application.properties  application.properties.in
src/main/resources/static/: index.html  main.14208b9406fb12d84cf8.js  main.6193ca1e17d4bdc05205.js  scripts.eb2518e0eb27724b4a8a.js  styles.de0031e7774f2e3563a1.css
work/: FakeDataGenerator.java  JdbcConfig.java
